--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
 </head>
 
 <body>
-    <div id="chart-container" class="flex flex-col py-4 items-center h-screen bg-gray-100">
-        <h1 id="map-heading" class="text-3xl mb-4">Interactive India Map - Social Computing Course</h1>
-        <div id="map-and-info" class="flex place-content-evenly w-full">
-            <div id="chart" class="bg-white rounded-lg shadow-lg"></div>
+    <div id="chart-container" class="flex flex-col py-4 px-8 items-center h-screen bg-gray-100">
+        <h1 id="map-heading" class="text-3xl mb-4 text-center">Interactive India Map - Social Computing Course</h1>
+        <div id="map-and-info" class="flex flex-col lg:flex-row lg:place-content-evenly w-full lg:h-full">
+            <div id="chart" class="bg-white rounded-lg shadow-lg w-full lg:w-1/2 mb-4 mx-4 lg:mb-0"></div>
             <!-- Menu -->
-            <div id="info-menu" class="flex flex-col items-center  w-1/4 bg-gray-200 rounded-lg shadow-lg p-4">
+            <div id="info-menu" class="flex flex-col items-center w-full lg:w-1/2 bg-gray-200 rounded-lg shadow-lg p-4 overflow-y-auto h-96">
                 <h2 class="text-lg mb-2">State Information</h2>
-                <div id="state-info" class="text-sm">
-                </div>
+                <div id="state-info" class="text-sm"></div>
             </div>
         </div>
     </div>
@@ -99,31 +98,6 @@
             .text(function (d) {
                 return "State : " + d.id + "\n" + d.properties.desc;
             });
-
-        aa = [80.9462, 26.8467];
-        // add circles to svg
-        india.selectAll("circle")
-            .data([aa]).enter()
-            .append("circle")
-            .attr("cx", function (d) {
-                console.log(proj(d));
-                return proj(d)[0];
-            })
-            .attr("cy", function (d) {
-                return proj(d)[1];
-            })
-            .attr("r", "3px")
-            .attr("fill", "black")
-            .on("mouseover", function () {
-                d3.select(this).attr("r", "6px").style('fill', "orange")
-            })
-            .on("mouseout", function () {
-                d3.select(this).attr("r", "3px").style("fill", 'black')
-            })
-            .append("title")
-            .text(function (d) {
-                return "City : " + "Lucknow" + "\n Here goes the City data";
-            })
 
     });
 
